--- a/hospital/templates/appointment.html
+++ b/hospital/templates/appointment.html
@@ -4,7 +4,7 @@
     <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + appointment.user.image_file) }}">
     <div class="media-body">
       <div class="article-metadata">
-        <a class="mr-2" href="{{ url_for('appointment_history', username=appointment.user.username) }}">{{ appointment.user.username }}</a>
+        <a class="mr-2" href="{{ url_for('appointment_history') }}">{{ appointment.user.username }}</a>
         <small class="text-muted">{{ appointment.booked_on.strftime('%Y-%m-%d') }}</small>
         {% if appointment.user == current_user %}
           <div>
