--- a/hospital/templates/order_history.html
+++ b/hospital/templates/order_history.html
@@ -80,7 +80,7 @@
                 <tr>
                   <th>Order id</th>
                   <th>Ordered on</th>
-                  <th>Chcek full History</th>
+                  <th>Check full History</th>
                 </tr>
             {% for order in orders.items %}
                 <tr>
