--- a/hospital/templates/bloodbank_map.html
+++ b/hospital/templates/bloodbank_map.html
@@ -94,8 +94,8 @@
       </div>
     </main>
     {% if current_user.is_authenticated %}
-    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('nearby_hospital_map') }}">Hospitals near me</a>
-    </br><a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('nearby_medical_stores_map') }}">Pharmacy near me</a>
+    <a class="btn btn-secondary btn-sm mt-2 mb-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('nearby_hospital_map') }}">Hospitals near me</a>
+    <a class="btn btn-secondary btn-sm mt-2 mb-3 ml-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('nearby_medical_stores_map') }}">Pharmacy near me</a>
   </br>
     <div id="map_of_my_location"></div>
     <script>
