Chat stored in database

--- a/hospital/templates/chat.html
+++ b/hospital/templates/chat.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" >
         <title>Life Care - Chat</title>
 
         <!-- Bootstrap -->
@@ -64,6 +64,8 @@
 
                     <!-- Display message start-->
                     <div id="display-message-section">
+                        <!-- DISPLAY PREVIOUS MESSAGES -->
+                        
                     </div>
                     <!-- Display message end -->
 
