--- a/hospital/templates/home.html
+++ b/hospital/templates/home.html
@@ -821,7 +821,7 @@
             <div class="chat-footer" style="margin-bottom: 6px;">
                <form class="form-container" id="user_chat_form" style="white-space: nowrap;"> 
                   <input type="text" size="40" name="query" autocomplete="off" placeholder="Ask me Something..." style="display: inline-block; color: black;" id="user-text">
-               <a href="#" id="process_input" style="display: inline-block;color:black;"><button style="border-width: thin;font-size:25px;color:black; display: inline-block; border-radius: 50%; width:50px; height:50px; background-color: #2895f1; cursor: pointer; margin-right: 5px;" onclick="userMessage()"><i class="fa fa-send-o" style="border-radius: 50%;"></i></button></a>
+               <a href="" id="process_input" style="display: inline-block;color:black;"><button style="border-width: thin;font-size:25px;color:black; display: inline-block; border-radius: 50%; width:50px; height:50px; background-color: #2895f1; cursor: pointer; margin-right: 5px;" onclick="userMessage()"><i class="fa fa-send-o" style="border-radius: 50%;"></i></button></a>
                </form>
             </div>
          </div>
