--- a/hospital/templates/booked_appointments.html
+++ b/hospital/templates/booked_appointments.html
@@ -7,15 +7,16 @@
 
     <!-- Site Icons -->
    <link rel="shortcut icon" href="static/images/fevicon.ico.png" type="image/x-icon" />
-
+   
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-
-    <link rel="stylesheet" href="{{ url_for('static', filename='bot_style.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     
+    <link rel="stylesheet" href="{{ url_for('static', filename='bot_style.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     {% if title %}
         <title>Hospital - {{ title }}</title>
     {% else %}
@@ -79,6 +80,9 @@
               {% endfor %}
             {% endif %}
           {% endwith %}        
+          {% if appointments.total == 0 %}
+          <h4 class="mb-4">You have not booked any appointments perviously</h4>
+          {% else %}
           <h4 class="mb-4">Appointments booked by {{ user.username }} ({{ appointments.total }})</h4>
           <table style="width: 100%;">
             <tr>
@@ -117,6 +121,7 @@
               ...
             {% endif %}
           {% endfor %}
+        {% endif %}
         </div>
         <div class="col-md-4">
           <div class="content-section">
@@ -276,12 +281,6 @@
         chatWindow.scrollTop = chatWindow.scrollHeight;
       }
       </script>
-      
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
