--- a/hospital/templates/layout.html
+++ b/hospital/templates/layout.html
@@ -82,14 +82,14 @@
       </div>
 </main>
 <button class="open-button" onclick="openForm()" style="right: 70px;">
-  <img src="static/images/lifebot.gif" alt="Avatar" class="avatar" style="right: 50px;">
+  <img src="{{ url_for('static', filename='images/lifebot.gif') }}" alt="Avatar" class="avatar" style="right: 50px;">
 </button>
 <div class="container" id="myForm" style="display: none; width: 500px;z-index: 9;position: fixed;right: 15px;bottom: 0px;border: none;">
   <div class="chat" style="display: flex;flex-direction: column;height: 80vh;width:490px;background: rgb(227, 230, 221);border-style: ridge;">
      <div class="chat-header">
         <div class="profile">
            <div class="left">
-              <img src="static/images/lifebot.gif" class="pp" style="margin-bottom: 2px; width: 60px; height: 60px;">
+              <img src="{{ url_for('static', filename='images/lifebot.gif') }}" class="pp" style="margin-bottom: 2px; width: 60px; height: 60px;">
               <button style="border-radius: 50%; position: fixed; right: 20px; bottom: 750px; padding-right: 5px; margin-right: 2px;background-color: white; border-width: thin;" onclick="closeForm()"><i class="fa fa-close" style="margin-left: 5px ;font-size:20px; cursor: pointer; "></i></button>
               <h3 style="margin-left: 18px; margin-bottom: 20px;">Life-Care Bot</h3>
               <span style="padding-top: 6px;color: white; margin-left: 8px; margin-bottom: 16px; font-size: 15px;">Ask me questions about this website</span>
