Ambulance info added

--- a/hospital/templates/important_hospital_contacts.html
+++ b/hospital/templates/important_hospital_contacts.html
@@ -82,7 +82,8 @@
           {% endwith %} 
           <a class="btn btn-secondary btn-sm mt-2 mb-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('nearby_hospital_map') }}">Hospitals near me</a> 
           <a class="btn btn-secondary btn-sm mt-2 mb-3 ml-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('important_blood_bank_contacts') }}">Blood Bank Contacts</a>    
-              </br> </br><h3 class="mb-4">Hospitals in Kolkata and their contact numbers</h3>   
+          <a class="btn btn-secondary btn-sm mt-2 mb-3 ml-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('important_ambulance_contacts') }}">Ambulance Contacts</a>   
+        </br> </br><h3 class="mb-4">Hospitals in Kolkata and their contact numbers</h3>   
           <table>
               <tr>
                 <th>Serial No</th>
