--- a/hospital/templates/important_contacts.html
+++ b/hospital/templates/important_contacts.html
@@ -2,4 +2,5 @@
 {% block content %}
 <a class="btn btn-secondary btn-sm mt-2 mb-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('important_hospital_contacts') }}">Hospital Contacts</a> 
 <a class="btn btn-secondary btn-sm mt-2 mb-3 ml-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('important_blood_bank_contacts') }}">Blood Bank Contacts</a>    
+<a class="btn btn-secondary btn-sm mt-2 mb-3 ml-3" style="font-size: 16px ;background-color: rgb(15, 150, 204); border-color: rgb(15, 150, 204); color:white;" href="{{ url_for('important_ambulance_contacts') }}">Ambulance Contacts</a> 
 {% endblock content %}
