--- a/hospital/templates/medicines.html
+++ b/hospital/templates/medicines.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Site Icons -->
-   <link rel="shortcut icon" href="static/images/fevicon.ico.png" type="image/x-icon" />
+   <link rel="shortcut icon" href="{{ url_for('static', filename='images/fevicon.ico.png') }}" type="image/x-icon" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -77,6 +77,47 @@
         .dropdown:hover .dropdown-content {display: block;}
         
         .dropdown:hover .dropbtn {background-color: rgb(56, 161, 161); color: black; cursor: pointer;}
+        * {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
     </style>
     {{ flask_util_js.js }}
   </head>
@@ -121,8 +162,6 @@
       </nav>
     </header>
     <main role="main" class="container">
-      <div class="row">
-        <div class="col-md-8">
           {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
@@ -132,42 +171,42 @@
               {% endfor %}
             {% endif %}
           {% endwith %}
-          {% if medicines %}
+          {% if medicines %}      
+          <div class="col-sm-12">
+              <h4 style="text-align: center;"></br>{{ disease_type|title }}</h4>
+              <p class="text-muted" style="margin-bottom: 5px;text-align: center;">Click on the medicine name to know more about the medicine</p><hr>
+          </div>
           <div class="row">
-      
-            <div class="col-sm-12">
-                <h3 style="text-align: center;"></br>{{ disease_type }}</h3><br><hr><br>
-            </div>
-            </div>
             {% for medicine in medicines.items %}
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="card">
+              <div class="column" style="margin-top: 4px; margin-bottom: 4px;">
+                <div class="card" style="margin-left: 2px; margin-right: 2px; margin-top: 4px; margin-bottom: 4px;">
                       {% if medicine.stock <= 20 %}
-                            <div class="alert">
-                              <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-                              <strong>Hurry!</strong> only {{ medicine.stock }} left!
-                            </div>
-                            {% endif %}
-                        <img src="{{ url_for('static', filename='images/meds/' + medicine.image_file) }}" class="card-img-top" alt="/" height="200">
-                        <div class="card-body"> 
-                            <a href="{{ url_for('medicine_display', medicine_id=medicine.id) }}" class="card-text" style="text-align: center;"><b>{{ medicine.name }}</b></a>
-                            <p> {{ medicine.id }} <br>
-                            Price: {{ medicine.price }}</p>
-                            <div class="button center"><a style='display: inline-block;
-                                background: #21759b;
-                                border-radius: 4px;
-                                font-family: "arial-black";
-                                font-size: 16px;
-                                color: #FFF;
-                                padding: 6px 10px;
-                                cursor: pointer; ' href="{{ url_for('add_to_cart', medicine_id=medicine.id) }}">Add to cart</a></div>
+                      <div class="alert">
+                        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+                       <p> <strong>Hurry!</strong> only {{ medicine.stock }} left! </p>
+                      </div>
+                      {% endif %}
+                      <img src="{{ url_for('static', filename='images/meds/' + medicine.image_file) }}" class="card-img-top" alt="/" height="150" width="100">
+                      <a href="{{ url_for('medicine_display', medicine_id=medicine.id) }}" class="card-text" style="text-align: center; margin-top: 7px;"><b>{{ medicine.name }}</b></a>
+                      <p>ID: {{ medicine.id }} <br>
+                      Price: {{ medicine.price }}</p>
+                      <div class="button center"><a style='display: inline-block;
+                          background: #21759b;
+                          border-radius: 4px;
+                          font-family: "arial-black";
+                          font-size: 16px;
+                          color: #FFF;
+                          padding: 6px 10px;
+                          cursor: pointer; ' href="{{ url_for('add_to_cart', medicine_id=medicine.id) }}">Add to cart</a>
+                          </div>
                         </div>
-                    </div>    
-                </div>
-            </div>
+                      </div>
+                  {% else %}
+                  <h3 style='text-align: center;'>No Medicines available</h3>
+                {% endfor %}
+              </div>
           </br>
-            {% endfor %}
+            
             {% for page_num in medicines.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
             {% if page_num %}
                 {% if medicines.page == page_num %}
@@ -183,31 +222,16 @@
         </br>
           <h3>There's Nothing to see here </h3>
           {% endif %}
-        </div>
-        <div class="col-md-4">
-          <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>Check these out!
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light"><a href="{{ url_for('necessary_information') }}">Necessary information</a></li>
-                <li class="list-group-item list-group-item-light"><a href="{{ url_for('view_announcement') }}">View announcements</a></li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-              </ul>
-            </p>
-          </div>
-        </div>
-      </div>
     </main>
     <button class="open-button" onclick="openForm()" style="right: 70px;">
-      <img src="static/images/lifebot.gif" alt="Avatar" class="avatar" style="right: 50px;">
+      <img src="{{ url_for('static', filename='images/lifebot.gif') }}" alt="Avatar" class="avatar" style="right: 50px;">
     </button>
     <div class="container" id="myForm" style="display: none; width: 500px;z-index: 9;position: fixed;right: 15px;bottom: 0px;border: none;">
       <div class="chat" style="display: flex;flex-direction: column;height: 80vh;width:490px;background: rgb(227, 230, 221);border-style: ridge;">
          <div class="chat-header">
             <div class="profile">
                <div class="left">
-                  <img src="static/images/lifebot.gif" class="pp" style="margin-bottom: 2px; width: 60px; height: 60px;">
+                  <img src="{{ url_for('static', filename='images/lifebot.gif') }}" class="pp" style="margin-bottom: 10px; width: 60px; height: 60px;">
                   <button style="border-radius: 50%; position: fixed; right: 20px; bottom: 750px; padding-right: 5px; margin-right: 2px;background-color: white; border-width: thin;" onclick="closeForm()"><i class="fa fa-close" style="margin-left: 5px ;font-size:20px; cursor: pointer; "></i></button>
                   <h3 style="margin-left: 18px; margin-bottom: 20px;">Life-Care Bot</h3>
                   <span style="padding-top: 6px;color: white; margin-left: 8px; margin-bottom: 16px; font-size: 15px;">Ask me questions about this website</span>
